# optimalMatrixMultiplication

./: CMakeLists.txt  DoxyFile  InputReader.cpp  InputReader.h  Matrix.cpp  Matrix.h  MatrixChain.cpp  MatrixChain.h  MatrixChainController.cpp  MatrixChainController.h  MatrixController.cpp  MatrixController.h  MatrixOptimizer.h  OptimizerCostBased.cpp  OptimizerCostBased.h  OutputWriter.cpp  OutputWriter.h  main.cpp
